2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/powerpc/spu-linux.mh: New file.
	* config/spu/spu.mt: New file.
	* configure.ac: Provide gdb_native configuration variable.
	* configure: Regenerate.
	* configure.host: Support powerpc64 to spu 'pseudo-native' mode.
	* configure.tgt: Add "spu" target_cpu and "spu*-*-*" target.
	* Makefile.in (spu_tdep_h): New variable.
	(ALLDEPFILES): Add spu-linux-nat.c and spu-tdep.c
	(spu-linux-nat.o, spu-tdep.o): Add dependencies.
	* spu-linux-nat.c: New file.
	* spu-tdep.c: New file.
	* spu-tdep.h: New file.

2006-11-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* osabi.c (gdbarch_lookup_osabi): Do not return
	GDB_OSABI_UNINITIALIZED.

2006-11-21  Pedro Alves  <pedro_alves@portugalmail.pt>

	Checked in by Joel Brobecker  <brobecker@adacore.com>
	* parse.c (write_exp_msymbol): Check SYMBOL_BFD_SECTION before
	dereferencing it.

2006-11-20  Joel Brobecker  <brobecker@adacore.com>

	* README: Remove obsolete information.

2006-11-20  Andrew Cagney  <cagney@redhat.com>

	* linux-nat.h: Refer to GNU/Linux or Linux kernel.
	* linux-nat.c (lin_lwp_attach_lwp, linux_nat_thread_alive): Ditto.
	* infcmd.c (attach_command): Ditto.
	* hppa-linux-tdep.c (hppa_linux_regset): Ditto.
	* mn10300-linux-tdep.c: Ditto.  Update copyright year.
	* frv-linux-tdep.c: Ditto.  Update copyright year.

2006-11-19  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.6.

2006-11-19  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Change "Changes since gdb-6.5" into "Changes in gdb-6.6".

2006-11-19  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.6 branch created (branch timestamp: 2006-11-15 12:00)
	* version.in: Bump version to 6.5.90.20061115-cvs

2006-11-14  Maxim Grigoriev  <maxim@tensilica.com>

	* NEWS: New port to Xtensa.
	* Makefile.in: Add dependencies for Xtensa files.
	* configure.tgt (xtensa*, xtensa*-*-elf*): New.
	* configure.host (xtensa*-*-elf*): New.
	* config/xtensa/xtensa.mt: New file.