@@ -282,6 +282,9 @@ extern struct value *value_at_lazy (struct type *type, CORE_ADDR addr);
 extern struct value *value_from_register (struct type *type, int regnum,
 					  struct frame_info *frame);
 
+extern CORE_ADDR address_from_register (struct type *type, int regnum,
+					struct frame_info *frame);
+
 extern struct value *value_of_variable (struct symbol *var, struct block *b);
 
 extern struct value *value_of_register (int regnum, struct frame_info *frame);
