@@ -1,5 +1,11 @@
 2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* findvar.c (address_from_register): New function.
+	* value.h (address_from_register): Add prototype.
+	* dwarf2loc.c (dwarf_expr_read_reg): Use address_from_register.
+
+2006-11-24  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* config/powerpc/spu-linux.mh: New file.
 	* config/spu/spu.mt: New file.
 	* configure.ac: Provide gdb_native configuration variable.
